--- a/event/templates/show_event.html
+++ b/event/templates/show_event.html
@@ -154,7 +154,7 @@
             <div class="bg-white border border-[#000457] rounded-lg flex flex-col overflow-hidden shadow-sm hover:shadow-lg transition-all duration-300 hover:scale-105">
                 <div class="h-64 relative overflow-hidden">
                     <img class="w-full h-full object-cover" src="${event.thumbnail || 'https://placehold.co/405x270'}" alt="${event.name}">
-                    <div class="absolute top-4 right-4"><div class="px-3 py-1 bg-white rounded-full shadow-md"><span class="text-gray-800 text-sm font-semibold">${event.venue_type}</span></div></div>
+                    <div class="absolute top-4 right-4"><div class="px-3 py-1 bg-white rounded-full shadow-md"><span class="text-gray-800 text-sm font-semibold">${event.venue_category}</span></div></div>
                 </div>
                 <div class="p-6 flex flex-col gap-4 flex-grow">
                     <div class="flex flex-wrap gap-4">
