--- a/landing/templates/sections/events_preview.html
+++ b/landing/templates/sections/events_preview.html
@@ -19,7 +19,7 @@
                 <img class="self-stretch h-full object-cover transition-transform duration-300 ease-in-out group-hover:scale-105" src="{{ event.thumbnail|default_if_none:'https://placehold.co/405x270' }}" alt="{{ event.name }}" loading="lazy">
                 <div class="absolute top-4 right-4">
                     <div class="px-3 py-1 bg-white rounded-full shadow-md">
-                        <div class="text-gray-800 text-sm font-semibold">{{ event.venue_type }}</div>
+                        <div class="text-gray-800 text-sm font-semibold">{{ event.venue_category }}</div>
                     </div>
                 </div>
             </div>
